add transition stydiia portfolio

--- a/index.html
+++ b/index.html
@@ -91,9 +91,30 @@
           <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
-              <li class="work-item"><img src="./images/box1.jpg" alt="работа с ноутбуками" width="370"></li>
-              <li class="work-item"><img src="./images/box2.jpg" alt="работа со сматрфоном" width="370"></li>
-              <li class="work-item"><img src="./images/box3.jpg" alt="работа с планшетом" width="370"></li>
+              <li class="work-item">
+                <div class="work-thumb">
+                    <img src="./images/box1.jpg" alt="работа с ноутбуками" width="370">
+                <div class="work-thumb-title">
+                    <h3 class="work-bottom-title">Десктопные приложения</h3>
+                </div>
+                </div>
+            </li>
+              <li class="work-item">
+                  <div class="work-thumb">
+                  <img src="./images/box2.jpg" alt="работа со сматрфоном" width="370">
+                <div class="work-thumb-title">
+                    <h3 class="work-bottom-title">Мобильные приложения</h3>
+                </div>
+                </div>
+            </li>
+              <li class="work-item">
+                  <div class="work-thumb">
+                  <img src="./images/box3.jpg" alt="работа с планшетом" width="370">
+                <div class="work-thumb-title">
+                    <h3 class="work-bottom-title">Дизайнерские решения</h3>
+                </div>
+                </div>
+            </li>
           </ul>
         </div>
       </section>
