--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,11 @@
             </ul> 
             <ul class="portfolio-list list">
                 <li class="portfolio-item">   
-                    <a class="portfolio-link" href="">                                                       
+                    <a class="portfolio-link" href="">  
+                        <!-- <div class="overlay">                                                     -->
                         <img src="./images/box4.jpg" alt="Веб-сайт" width="370">
+                        <!-- <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                        исчерпывающие сведения  о компании или частном лице.</p></div> -->
                         <div class="portfolio-content">
                         <h2 class="portfolio-bottom-title">Технокряк</h2>
                         <p class="portfolio-text">Веб-сайт</p></div></a>
