--- a/portfolio.html
+++ b/portfolio.html
@@ -49,68 +49,108 @@
                 <li class="portfolio-btn-item"><button type="button" class="portfolio-btn">Маркетинг</button></li>
             </ul> 
             <ul class="portfolio-list list">
-                <li class="portfolio-item">   
-                    <a class="portfolio-link" href="">  
-                        <!-- <div class="overlay">                                                     -->
-                        <img src="./images/box4.jpg" alt="Веб-сайт" width="370">
-                        <!-- <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
-                        исчерпывающие сведения  о компании или частном лице.</p></div> -->
+                <li class="portfolio-item"> 
+                        <a class="portfolio-link link" href="">  
+                          <div class="overlay">                                         
+                        <img src="./images/box4.jpg" alt="Веб-сайт" width="370"> 
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это позволит посетителю получить
+                        исчерпывающие сведения  о компании или частном лице.</p></div>
                         <div class="portfolio-content">
                         <h2 class="portfolio-bottom-title">Технокряк</h2>
                         <p class="portfolio-text">Веб-сайт</p></div></a>
                 </li>
                 <li class="portfolio-item"> 
-                    <a class="portfolio-link" href="">
+                    <a class="portfolio-link link" href="">
+                        <div class="overlay">
                         <img src="./images/box5.jpg" alt="Постер" width="370">
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                            позволит посетителю получить
+                            исчерпывающие сведения  о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-content">
                         <h2 class="portfolio-bottom-title">Постер <span lang="en">New Orlean vs Golden Star</span> </h2>
                         <p class="portfolio-text">Дизайн</p> </div></a>
                 </li> 
                 <li class="portfolio-item">  
-                    <a class="portfolio-link" href="">
+                    <a class="portfolio-link link" href="">
+                        <div class="overlay">
                         <img src="./images/box6.jpg" alt="Ресторан " width="370">
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                            позволит посетителю получить
+                            исчерпывающие сведения  о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-content">
                         <h2 class="portfolio-bottom-title">Ресторан <span lang="en">Seafood</span></h2>
                         <p class="portfolio-text">Приложение</p></div></a>
                 </li>
                 <li class="portfolio-item"> 
-                    <a class="portfolio-link" href="">
+                    <a class="portfolio-link link" href="">
+                        <div class="overlay">
                         <img src="./images/box7.jpg" alt="Наушники" width="370">
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                            позволит посетителю получить
+                            исчерпывающие сведения  о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-content">
                         <h2 class="portfolio-bottom-title">Проект <span lang="en">Prime</span></h2>
                         <p class="portfolio-text">Маркетинг</p> </div></a>
                 </li>
                 <li class="portfolio-item">  
-                    <a class="portfolio-link" href="">
+                    <a class="portfolio-link link" href="">
+                        <div class="overlay">
                         <img src="./images/box8.jpg" alt="Упаковка" width="370">
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                            позволит посетителю получить
+                            исчерпывающие сведения  о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-content">
                         <h2 class="portfolio-bottom-title">Проект <span lang="en">Boxes</span></h2>
                         <p class="portfolio-text">Приложение</p> </div></a>
                 </li>
                 <li class="portfolio-item">    
-                    <a class="portfolio-link" href="">
+                    <a class="portfolio-link link" href="">
+                        <div class="overlay">
                         <img src="./images/box9.jpg" alt="Монитор" width="370">
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                            позволит посетителю получить
+                            исчерпывающие сведения  о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-content">
                         <h2 lang="en" class="portfolio-bottom-title">Inspiration has no Borders</h2>
                         <p class="portfolio-text">Веб-сайт</p> </div></a>
                 </li>
                 <li class="portfolio-item">  
-                    <a class="portfolio-link" href="">
+                    <a class="portfolio-link link" href="">
+                        <div class="overlay">
                         <img src="./images/box10.jpg" alt="Журнал" width="370">
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                            позволит посетителю получить
+                            исчерпывающие сведения  о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-content">
                         <h2 class="portfolio-bottom-title">Издание <span lang="en">Limited Edition</span></h2>
                         <p class="portfolio-text">Дизайн</p></div></a>
                 </li>
                 <li class="portfolio-item">  
-                    <a class="portfolio-link" href="">
+                    <a class="portfolio-link link" href="">
+                        <div class="overlay">
                         <img src="./images/box11.jpg" alt="Карточка" width="370">
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                            позволит посетителю получить
+                            исчерпывающие сведения  о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-content">
                         <h2 class="portfolio-bottom-title">Проект <span lang="en">LAB</span></h2>
                         <p class="portfolio-text">Маркетинг</p></div></a>
                 </li>
                 <li class="portfolio-item">   
-                    <a class="portfolio-link" href="">
+                    <a class="portfolio-link link" href="">
+                        <div class="overlay">
                         <img src="./images/box12.jpg" alt="Ноутбук" width="370">
+                        <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов. Все это
+                            позволит посетителю получить
+                            исчерпывающие сведения  о компании или частном лице.</p>
+                        </div>
                         <div class="portfolio-content">
                         <h2 lang="en" class="portfolio-bottom-title">Growing Business</h2>
                         <p class="portfolio-text">Приложение</p> </div></a>
