--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     </ul></div>
         </div>
        </footer>
-       <div class="backdrop" data-modal is-hidden>
+       <div class="backdrop is-hidden" data-modal>
            <div class="modal">
                <svg class="modal-close" width="30" height="30" data-modal-close>
                 <use href="./images/icons.svg#icon-close1"></use>
